--- a/wp-content/themes/adorable/style.css
+++ b/wp-content/themes/adorable/style.css
@@ -884,7 +884,7 @@ h4 {
 	margin: 0 0 20px 0;
 	padding: 7px 0 7px 0 !important;
 	text-align: center;
-	text-transform: lowercase;
+	/* text-transform: lowercase; */
 
 }
 
