--- a/wp-content/themes/adorable/style.css
+++ b/wp-content/themes/adorable/style.css
@@ -272,6 +272,10 @@ body {
 .header-full-width #title a {
 	width: 1100px;
 }
+#title .orange {
+  color: #FA8A00;
+}
+
 
 
 /* Header / Primary / Secondary Navigation
