--- a/wp-content/themes/adorable/style.css
+++ b/wp-content/themes/adorable/style.css
@@ -2422,7 +2422,7 @@ div.gform_wrapper .gform_footer {
 	#title-area {
 		float: left;
 		/* text-align: center; */
-		width: 100%;
+		/* width: 100%; */
 	}
 
 	.menu li.right {
