--- a/wp-content/themes/adorable/style.css
+++ b/wp-content/themes/adorable/style.css
@@ -2420,9 +2420,9 @@ div.gform_wrapper .gform_footer {
 	#header .menu,
 	#header .widget-area,
 	#title-area {
-		float: left;
+		/* float: left; */
 		/* text-align: center; */
-		/* width: 100%; */
+		width: 100%;
 	}
 
 	.menu li.right {
